@@ -51,7 +51,6 @@ local function StatFunction(auctions, extra)
 	local priceOrder = {}
 	
 	for auctionID, auctionData in pairs(auctions) do
-		local buy = auctionData.buyoutUnitPrice
 		local weight = weighted and auctionData.stack or 1
 		
 		for i = 1, weight do
@@ -61,7 +60,7 @@ local function StatFunction(auctions, extra)
 	
 	if #priceOrder <= 0 then return nil end
 	
-	TSort(priceOrder, function(a, b) return auctions[b].buyoutUnitPrice < auctions[b].buyoutUnitPrice end)
+	TSort(priceOrder, function(a, b) return auctions[a].buyoutUnitPrice < auctions[b].buyoutUnitPrice end)
 
 	local index = MMin(MFloor(position * #priceOrder / 100) + 1, #priceOrder)
 
