@@ -11,7 +11,7 @@ Description =
 	English = "LibPGCEx allows to register modules that extend LibPGC functionality.",
 }
 Author = "Baanano"
-Version = "0.4.4 v2"
+Version = "0.4.4 v3"
 Email = "baanano.rift@gmail.com"
 Website = "http://www.bananah.net/"
 Environment = "1.10"
